# franken_networkx

./: .gitignore  CHANGELOG.md  Cargo.toml  FEATURE_PARITY.md  README.md  pyproject.toml  test_d_rust.rs  test_d_type.py  test_dijkstra.py  test_succ.py  trace.patch
artifacts/e2e/v1/: e2e_scenario_matrix_oracle_contract_v1.json  e2e_scenario_matrix_oracle_contract_v1.md
crates/fnx-algorithms/: Cargo.toml
crates/fnx-algorithms/benches/: algorithm_benchmarks.rs
crates/fnx-algorithms/src/: bin_test.rs  lib.rs  test_dijkstra.rs
crates/fnx-classes/src/: digraph.rs  lib.rs
crates/fnx-conformance/src/: lib.rs
crates/fnx-conformance/tests/: cgse_legacy_tiebreak_gate.rs  reliability_budget_gate.rs  smoke.rs
crates/fnx-convert/src/: lib.rs
crates/fnx-dispatch/src/: lib.rs
crates/fnx-durability/src/: lib.rs
crates/fnx-generators/: Cargo.toml
crates/fnx-generators/src/: lib.rs
crates/fnx-python/: Cargo.toml
crates/fnx-python/src/: algorithms.rs  digraph.rs  generators.rs  lib.rs  readwrite.rs  views.rs
crates/fnx-readwrite/src/: lib.rs
crates/fnx-runtime/: Cargo.toml
crates/fnx-runtime/src/: lib.rs
crates/fnx-views/src/: lib.rs
python/franken_networkx/: __init__.py  _fnx.pyi  backend.py  exception.py
python/franken_networkx/algorithms/: __init__.py
python/franken_networkx/classes/: __init__.py
python/franken_networkx/drawing/: __init__.py  layout.py  nx_pylab.py
python/franken_networkx/generators/: __init__.py
python/franken_networkx/readwrite/: __init__.py
scripts/: capture_oracle_fixtures.py  generate_e2e_scenario_matrix.py
tests/python/: test_centrality_algorithms.py  test_classic_generators.py  test_community_extras.py  test_component_algorithms.py  test_connectivity.py  test_conversion.py  test_conversion_extras.py  test_coverage_gaps.py  test_cycle_algorithms.py  test_dag_additional.py  test_dag_extras.py  test_drawing.py  test_e2e_smoke.py  test_flow.py  test_gexf.py  test_graph_metrics_expansion.py  test_graph_predicates.py  test_graph_utilities.py  test_growth_generators.py  test_import.py  test_io.py  test_io_variants.py  test_link_prediction.py  test_matching_additional.py  test_multigraph_algorithms.py  test_new_bindings.py  test_new_parity_functions.py  test_pajek_leda_multiline.py  test_scale_free_generators.py  test_temp_keys.py  test_traversal.py  test_traversal_additional.py  test_verification_matrix.py
(+1 files in other folders)
