[package]
name = "fnx-generators"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
fnx-classes = { path = "../fnx-classes" }
fnx-runtime = { path = "../fnx-runtime" }
mt19937 = "3.3.0"
rand = { version = "0.10.0", default-features = false, features = ["std", "std_rng"] }

[dev-dependencies]
proptest = "1.10.0"
