[package]
name = "fnx-runtime"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[features]
default = []
asupersync-integration = ["dep:asupersync"]
ftui-integration = ["dep:ftui"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
asupersync = { version = "0.2.0", optional = true, default-features = false }
ftui = { version = "0.2.1", optional = true, default-features = false }
